[package]
name = "Hermes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
crossterm = "0.27.0"
ratatui = "0.26.2"
tokio = { version = "1.37.0", features = ["full"] }

[dev-dependencies]
proptest = "1.4.0"
